# omt-experiments

./: README.md  TODO.md
0001-packer/: pack.sh
0001-packer/packer/: Cargo.toml
0001-packer/packer/src/: main.rs
0002-packer-struct/: pack.sh  unpack.sh
0002-packer-struct/packer/: Cargo.toml
0002-packer-struct/packer/src/: main.rs
0002-packer-struct/testdata/: expected-result-test1223334444.omar  testdata122334444.paklist
0003-asset/Content/: test.asset_config.yaml
0003-asset/Content/atlas/: atlas.asset_config.yaml
0003-asset/asset/: Cargo.toml
0003-asset/asset/src/: main.rs
0004-atlas/atlas/: Cargo.toml
0004-atlas/atlas/src/: atlas.rs  lib.rs  main.rs
0005-soundbank/soundbank/: Cargo.toml
