[package]
name = "asset"
version = "0.1.0"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
glob = "~0.3.0"
yaml-rust = "~0.4.3"
regex = "~1.3.1"